<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CampusMarket</string>

    <string name="sell_item_title">Sell an item</string>
    <string name="add_photos">Add Photos</string>
    <string name="tap_to_upload_images">Tap to upload images</string>

    <string name="enter_title">Enter title</string>
    <string name="select_category">Select category</string>
    <string name="select_condition">Select condition</string>
    <string name="enter_price">Enter price</string>
    <string name="description">Description</string>

    <string name="publish_listing">Publish Listing</string>
    <string name="save_draft">Save Draft</string>

    <string name="selected_product_photo">Selected product photo</string>
    <string name="camera">Camera</string>
</resources>